fix: use stream instead of `readAllLines`